Project committed