@@ -2,6 +2,7 @@
 package com.vivekanand.manager.uploads;
 
 import org.springframework.core.io.FileSystemResource;
+import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -11,7 +12,9 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.InputStream;
 import java.net.URI;
+import java.net.URL;
 
 @RestController
 @RequestMapping("/api/uploads")
@@ -34,23 +37,25 @@ public class UploadController {
     @PreAuthorize("hasAnyRole('ADMIN','MEMBER')")
     public ResponseEntity<?> download(@PathVariable Long id) {
         Upload u = repo.findById(id).orElseThrow();
-
-        // Optional: add ownership checks here
-
-        // If Cloudinary (URL in storagePath): redirect
         var maybeUrl = storage.downloadUrl(u);
         if (maybeUrl.isPresent()) {
-            return ResponseEntity.status(HttpStatus.FOUND)
-                    .location(URI.create(maybeUrl.get()))
-                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + u.getOriginalFilename() + "\"")
-                    .build();
+            try {
+                InputStream in = new URL(maybeUrl.get()).openStream();
+                return ResponseEntity.ok()
+                        .contentType(MediaType.parseMediaType(u.getContentType()))
+                        .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + u.getOriginalFilename() + "\"")
+                        .header("X-Content-Type-Options", "nosniff")
+                        .body(new InputStreamResource(in));
+            } catch (Exception e) {
+                return ResponseEntity.status(HttpStatus.BAD_GATEWAY).body("Failed to fetch remote resource");
+            }
         }
 
-        // Else: local filesystem streaming
         Resource res = storage.loadAsResource(u);
         return ResponseEntity.ok()
                 .contentType(MediaType.parseMediaType(u.getContentType()))
                 .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + u.getOriginalFilename() + "\"")
+                .header("X-Content-Type-Options", "nosniff")
                 .body(res);
     }
 
